crates/gurih_dsl/tests/snapshots/error_snapshots__unknown_top_level_node.snap
---
source: crates/gurih_dsl/tests/error_snapshots.rs
expression: s
---
error[parse_error]: Unknown top-level definition: unknown_node
 --> test.kdl:2:5
  |
2 |     unknown_node "something"
  |     ^^^^^^^^^^^^ Unknown top-level definition: unknown_node
